--- a/Project4/Project4.vcxproj
+++ b/Project4/Project4.vcxproj
@@ -24,34 +24,34 @@
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <Keyword>ManagedCProj</Keyword>
     <RootNamespace>Project4</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <CLRSupport>true</CLRSupport>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <CLRSupport>true</CLRSupport>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <CLRSupport>true</CLRSupport>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <CLRSupport>true</CLRSupport>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
@@ -105,6 +105,8 @@
     </ClCompile>
     <Link>
       <AdditionalDependencies />
+      <SubSystem>Windows</SubSystem>
+      <EntryPointSymbol>main</EntryPointSymbol>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -133,18 +135,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="MyForm.cpp" />
+    <ClCompile Include="..\..\..\..\..\jamal%27s programming\Data structures &amp; Algorithms (lab)\mid project\Project4\Project4\About.cpp" />
+    <ClCompile Include="..\..\..\..\..\jamal%27s programming\Data structures &amp; Algorithms (lab)\mid project\Project4\Project4\MyForm.cpp" />
+    <ClCompile Include="..\..\..\..\..\jamal%27s programming\Data structures &amp; Algorithms (lab)\mid project\Project4\Project4\MyForm2.cpp" />
     <ClCompile Include="MyForm1.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="MyForm.h">
-      <FileType>CppForm</FileType>
-    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\jamal%27s programming\Data structures &amp; Algorithms (lab)\command line text editor c++\cmd-line-text-editor-master\document.h" />
+    <ClInclude Include="..\..\..\..\..\jamal%27s programming\Data structures &amp; Algorithms (lab)\mid project\Project4\Project4\About.h" />
+    <ClInclude Include="..\..\..\..\..\jamal%27s programming\Data structures &amp; Algorithms (lab)\mid project\Project4\Project4\MyForm.h" />
+    <ClInclude Include="..\..\..\..\..\jamal%27s programming\Data structures &amp; Algorithms (lab)\mid project\Project4\Project4\MyForm2.h" />
     <ClInclude Include="MyForm1.h">
       <FileType>CppForm</FileType>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="..\..\..\..\..\jamal%27s programming\Data structures &amp; Algorithms (lab)\mid project\Project4\Project4\About.resx" />
+    <EmbeddedResource Include="..\..\..\..\..\jamal%27s programming\Data structures &amp; Algorithms (lab)\mid project\Project4\Project4\MyForm.resx" />
+    <EmbeddedResource Include="..\..\..\..\..\jamal%27s programming\Data structures &amp; Algorithms (lab)\mid project\Project4\Project4\MyForm2.resx" />
     <EmbeddedResource Include="MyForm1.resx">
       <DependentUpon>MyForm1.h</DependentUpon>
     </EmbeddedResource>
